--- a/backend/package.json
+++ b/backend/package.json
@@ -2,17 +2,26 @@
     "name": "backend",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "app.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon app.js"
+        "start": "node app.js",
+        "dev": "nodemon app.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "connect-flash": "^0.1.1",
         "dotenv": "^10.0.0",
+        "ejs": "^3.1.6",
         "express": "^4.17.1",
-        "nodemon": "^2.0.13"
+        "express-ejs-layouts": "^2.5.1",
+        "express-session": "^1.17.2",
+        "mongoose": "^6.0.12",
+        "nodemon": "^2.0.13",
+        "passport": "^0.5.0",
+        "passport-local": "^1.0.0"
     }
 }
