--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
         "nodemon": "^2.0.13",
         "passport": "^0.5.0",
         "passport-local": "^1.0.0"
+    },
+    "engines": {
+        "node": ">=8.0.0"
     }
+
+
 }
