--- a/package.json
+++ b/package.json
@@ -1,32 +1,37 @@
 {
-    "name": "backend",
-    "version": "1.0.0",
-    "description": "",
-    "main": "app.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node app.js",
-        "dev": "nodemon app.js"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "bcryptjs": "^2.4.3",
-        "connect-flash": "^0.1.1",
-        "dotenv": "^10.0.0",
-        "ejs": "^3.1.6",
-        "express": "^4.17.1",
-        "express-ejs-layouts": "^2.5.1",
-        "express-session": "^1.17.2",
-        "mongoose": "^6.0.12",
-        "nodemon": "^2.0.13",
-        "passport": "^0.5.0",
-        "passport-local": "^1.0.0"
-    },
-    "engines": {
-        "node": ">=8.0.0"
-    }
-
-
+  "name": "react",
+  "version": "1.0.0",
+  "description": "React example starter project",
+  "keywords": [
+    "react",
+    "starter"
+  ],
+  "main": "src/index.js",
+  "dependencies": {
+    "axios": "0.23.0",
+    "react": "17.0.2",
+    "react-bootstrap-4": "0.29.1",
+    "react-dom": "17.0.2",
+    "react-lazy-load-image-component": "1.5.1",
+    "react-reveal": "1.2.2",
+    "react-router-dom": "5.3.0",
+    "react-scripts": "4.0.0",
+    "tailwindcss": "2.2.17"
+  },
+  "devDependencies": {
+    "@babel/runtime": "7.13.8",
+    "typescript": "4.1.3"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
