--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "bcryptjs": "^2.4.3",
         "connect-flash": "^0.1.1",
+        "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "ejs": "^3.1.6",
         "express": "^4.17.1",
@@ -27,6 +28,4 @@
     "engines": {
         "node": ">=8.0.0"
     }
-
-
 }
