--- a/package.json
+++ b/package.json
@@ -1,37 +1,39 @@
 {
-  "name": "react",
-  "version": "1.0.0",
-  "description": "React example starter project",
-  "keywords": [
-    "react",
-    "starter"
-  ],
-  "main": "src/index.js",
-  "dependencies": {
-    "axios": "0.23.0",
-    "react": "17.0.2",
-    "react-bootstrap-4": "0.29.1",
-    "react-dom": "17.0.2",
-    "react-lazy-load-image-component": "1.5.1",
-    "react-reveal": "1.2.2",
-    "react-router-dom": "5.3.0",
-    "react-scripts": "4.0.0",
-    "tailwindcss": "2.2.17"
-  },
-  "devDependencies": {
-    "@babel/runtime": "7.13.8",
-    "typescript": "4.1.3"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+    "name": "react",
+    "version": "1.0.0",
+    "description": "React example starter project",
+    "keywords": [
+        "react",
+        "starter"
+    ],
+    "main": "src/index.js",
+    "dependencies": {
+        "axios": "0.23.0",
+        "react": "17.0.2",
+        "react-bootstrap-4": "0.29.1",
+        "react-dom": "17.0.2",
+        "react-lazy-load-image-component": "1.5.1",
+        "react-reveal": "1.2.2",
+        "react-router-dom": "5.3.0",
+        "react-scripts": "4.0.0",
+        "react-table": "^7.7.0",
+        "tailwindcss": "2.2.17"
+    },
+    "devDependencies": {
+        "@babel/runtime": "7.13.8",
+        "typescript": "4.1.3"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test --env=jsdom",
+        "eject": "react-scripts eject",
+        "dev": "concurrently \"npm run start\" \"cd backend && nodemon app\""
+    },
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not ie <= 11",
+        "not op_mini all"
+    ]
 }
